--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "duckdb>=1.4.0",
     "openai>=1.0.0",
     "aiohttp>=3.12.15",
+    "rapidyaml>=0.10.0",
     "tree-sitter>=0.25.0",
     "tree-sitter-python>=0.25.0",
     "tree-sitter-markdown>=0.5.1",
@@ -97,6 +98,11 @@ Repository = "https://github.com/chunkhound/chunkhound"
 Issues = "https://github.com/chunkhound/chunkhound/issues"
 Documentation = "https://github.com/chunkhound/chunkhound#readme"
 Changelog = "https://github.com/chunkhound/chunkhound/releases"
+
+[tool.hatch.build]
+include = [
+    "tests/fixtures/yaml/**/*",
+]
 
 [tool.hatch.build.targets.wheel]
 packages = ["chunkhound"]
