--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ dependencies = [
     "readchar>=4.2.1",
     "scikit-learn>=1.3.0",
     "numpy>=1.24.0",
+    "pathspec>=0.12.1",
 ]
 
 [project.optional-dependencies]
