--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "numpy>=1.24.0",
     "pathspec>=0.12.1",
+    "pygit2>=1.12.0",
 ]
 
 [project.optional-dependencies]
