--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [project]
 name = "chunkhound"
-version = "4.0.1"
+dynamic = ["version"]
 description = "Local-first semantic code search with vector and regex capabilities for AI assistants via MCP"
 readme = "README.md"
 requires-python = ">=3.10,<3.14"
@@ -102,6 +102,19 @@ Repository = "https://github.com/chunkhound/chunkhound"
 Issues = "https://github.com/chunkhound/chunkhound/issues"
 Documentation = "https://github.com/chunkhound/chunkhound#readme"
 Changelog = "https://github.com/chunkhound/chunkhound/releases"
+
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "chunkhound/_version.py"
+
+[tool.hatch.build]
+include = [
+    "chunkhound/**/*.py",
+    "chunkhound/py.typed",
+    "tests/fixtures/yaml/**/*",
+]
 
 [tool.hatch.build.targets.wheel]
 packages = ["chunkhound"]
