Universal config-literal parsing for Python/JS/TS/JSX with AST-based hints, noise reduction, and full test coverage
- Summary
      - Parse top‑level config literals (dict/object/array) across Python, JavaScript, TypeScript, and JSX/TSX.
      - Use AST-based initializer detection for accurate object/array chunk typing.
      - Restrict captures to true top‑level program scope to avoid noisy chunks.
      - Restore top‑level function expression/arrow coverage where needed to satisfy edge cases.
      - Add comprehensive tests (ESM, CommonJS, named exports, JSX/TSX).
      - Result: Full test suite passes; minified library expansion back within thresholds.
  - Parser changes
      - Python (chunkhound/parsers/mappings/python.py)
          - DEFINITION: capture only top‑level assignments with literal RHS (dictionary|list), include @lhs and @rhs.
          - Naming: prefer @lhs for variable name; fallback to assignment_line_N.
          - Metadata: chunk_type_hint via RHS node type (dictionary → object, list → array).
          - Removed duplicate universal concept impl; single canonical LanguageMapping implementation.
      - JavaScript (chunkhound/parsers/mappings/javascript.py)
          - DEFINITION (top‑level, anchored under program):
              - Variable declarators (const/let/var) only when initializer is (object|array); captures @name, @init.
              - CommonJS exports: module.exports = …, module.exports.* = …, exports.* = … only with (object|array) RHS; @init captured.
              - Add patterns for top‑level function expression and arrow function declarators to retain function coverage.
          - Metadata: infer object/array from @init node type; shallow child scan fallback only when needed.
      - TypeScript (chunkhound/parsers/mappings/typescript.py)
          - Mirrors JS: top‑level object/array declarators and CommonJS assignments with @init; function expr/arrow patterns restored.
          - Metadata: same @init-based detection.
      - JS

--- a/.gitignore
+++ b/.gitignore
@@ -275,5 +275,6 @@ logs/
 
 # for those who like to keep agents' configs close to their projects
 .codex-persistent
-# muting for now
+
+tickets/
 .devcontainer
