--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,6 @@ chunkhound/_version.py
 
 # metrics
 cluster_eval.json
+operations/tree-sitter*
+operations/chunkhound_agent_doc*
+operations/agent_docs/
