wip of documentation generator

--- a/.gitignore
+++ b/.gitignore
@@ -287,5 +287,6 @@ chunkhound/_version.py
 # metrics
 cluster_eval.json
 operations/tree-sitter*
+operations/docs*
 operations/chunkhound_agent_doc*
 operations/agent_docs/
